# turingsoup

./: .gitignore  LICENSE  Makefile  README.md  index.html
css/: styles.css
js/: bff.js  main.js  population-wasm.js  population.js  tape.js  tooltip.js  wasm-bridge.js  worker-pool.js  worker.js
wasm/: Cargo.toml
wasm/pkg/: package.json  turing_soup_wasm.d.ts  turing_soup_wasm.js  turing_soup_wasm_bg.wasm  turing_soup_wasm_bg.wasm.d.ts
wasm/src/: bff.rs  compression.rs  lib.rs
