[package]
name = "turing-soup-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WASM core for Turing Soup BFF simulator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
miniz_oxide = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
